--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/store": "^14.3.2",
     "angularfire2": "^5.4.2",
     "firebase": "^9.18.0",
     "ngx-loading": "^14.0.0",
